adding input squares

--- a/index.html
+++ b/index.html
@@ -20,8 +20,113 @@
             <li>If your letter turns green, it's correct!</li>
             <li>You have 6 attempts to find the correct word.</li>
             <li>Let's play!</li>
-        </ul>
+        </ul><br><br>
 
+        <div class="game-container">
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+            <div class="word-row">
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+                <div class="square">
+                    <input type="text" class="square-input">
+                </div>
+            </div>
+        </div><br>
+        
 
         <div class="keyboard">
            <div class="row" id="row-0">
