--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="how-to-play">
                 <h3>How to play</h3>
                 <ul>
-                <li>The aim of Wordle if to guess the correct five-letter word.</li>
+                <li>The aim of Wordle is to guess the correct five-letter word.</li>
                 <li>Use the keyboard to select your letters.</li>
                 <li>Click "Enter" to submit your word.</li>
                 <li>If your letter doesn't change color, that letter is not part of your word.</li>
@@ -76,37 +76,37 @@
 
             <div class="keyboard-container">
                 <div class="keyboardRow" id="keyboardRow-0">
-                     <button class="key">Q</button>
-                     <button class="key">W</button>
-                     <button class="key">E</button>
-                     <button class="key">R</button>
-                     <button class="key">T</button>
-                     <button class="key">Y</button>
-                     <button class="key">U</button>
-                     <button class="key">I</button>
-                     <button class="key">O</button>
-                     <button class="key">P</button>
+                     <button class="key" id="Q">Q</button>
+                     <button class="key" id="W">W</button>
+                     <button class="key" id="E">E</button>
+                     <button class="key" id="R">R</button>
+                     <button class="key" id="T">T</button>
+                     <button class="key" id="Y">Y</button>
+                     <button class="key" id="U">U</button>
+                     <button class="key" id="I">I</button>
+                     <button class="key" id="O">O</button>
+                     <button class="key" id="P">P</button>
                  </div>
                  <div class="keyboardRow" id="keyboardRow-1">
-                     <button class="key">A</button>
-                     <button class="key">S</button>
-                     <button class="key">D</button>
-                     <button class="key">F</button>
-                     <button class="key">G</button>
-                     <button class="key">H</button>
-                     <button class="key">J</button>
-                     <button class="key">K</button>
-                     <button class="key">L</button>
+                     <button class="key" id="A">A</button>
+                     <button class="key" id="S">S</button>
+                     <button class="key" id="D">D</button>
+                     <button class="key" id="F">F</button>
+                     <button class="key" id="G">G</button>
+                     <button class="key" id="H">H</button>
+                     <button class="key" id="J">J</button>
+                     <button class="key" id="K">K</button>
+                     <button class="key" id="L">L</button>
                  </div>
                  <div class="keyboardRow" id="keyboardRow-2">
-                     <button class="key" id="key-delete">DEL</button>
-                     <button class="key">Z</button>
-                     <button class="key">X</button>
-                     <button class="key">C</button>
-                     <button class="key">V</button>
-                     <button class="key">B</button>
-                     <button class="key">N</button>
-                     <button class="key">M</button>
+                     <button class="key" id="key-delete">«</button>
+                     <button class="key" id="Z">Z</button>
+                     <button class="key" id="X">X</button>
+                     <button class="key" id="C">C</button>
+                     <button class="key" id="V">V</button>
+                     <button class="key" id="B">B</button>
+                     <button class="key" id="N">N</button>
+                     <button class="key" id="M">M</button>
                      <button class="key" id="key-enter">ENTER</button>
                  </div>
             </div>
