adding sound-effects for gameover and winning

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                      <button class="key" id="key-enter">ENTER</button>
                  </div>
             </div>
+            <audio id="sound-effect" class="winning" src="crowd-cheer-ii-6263.mp3"></audio>
+            <audio id="sound-effect" class="gameover" src="gameover-86548.mp3"></audio>
     </div>
         
 
