--- a/index.html
+++ b/index.html
@@ -110,8 +110,12 @@
                      <button class="key" id="key-enter">ENTER</button>
                  </div>
             </div>
+            <div id="window-message">
+                <div id="win-message">CONGRATULATIONS!</div>
+                <div id="gameover-message">Game Over!</div>
+            </div>
             <audio id="sound-effect" class="winning" src="crowd-cheer-ii-6263.mp3"></audio>
-            <audio id="sound-effect" class="gameover" src="gameover-86548.mp3"></audio>
+            <audio id="sound-effect" class="gameover" src="wah-wah-sad-trombone-6347.mp3"></audio>
     </div>
         
 
