adding key Handler function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 </ul>
             </div>
 
+            <div id="window-message">
+                <div id="win-message">Congratulations!</div>
+                <div id="gameover-message">Game Over!</div>
+            </div>    
+
             <div class="input-container">
                 <div class="inputRow" id="inputRow-0">
                     <div class="square" id="inputRow-0-square-0"></div>
@@ -72,7 +77,8 @@
                     <div class="square" id="inputRow-5-square-4"></div>
                 </div>
             </div>
-                
+
+
 
             <div class="keyboard-container">
                 <div class="keyboardRow" id="keyboardRow-0">
@@ -110,10 +116,7 @@
                      <button class="key" id="key-enter">ENTER</button>
                  </div>
             </div>
-            <div id="window-message">
-                <div id="win-message">CONGRATULATIONS!</div>
-                <div id="gameover-message">Game Over!</div>
-            </div>
+            
             <audio id="sound-effect" class="winning" src="crowd-cheer-ii-6263.mp3"></audio>
             <audio id="sound-effect" class="gameover" src="wah-wah-sad-trombone-6347.mp3"></audio>
     </div>
