adding style to keyboard

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
     <body>
         
+      
+            <!-- <div id="popup" onclick="hideMessage()">
+                <div id="message-courtain"></div>
+                <div id="message">xfdsaoifsaoifudsoifsauoidsuoifadusxx</div>
+            </div> -->
+
         <div class="full-page">
             <div class="title">
                 <h1 >Wordle Game</h1>
