adding to check if the word is validy

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
 
             <div id="window-message">
+                <!-- <div id="invalid-word-message">Word doesn't exist</div> -->
                 <div id="win-message">Congratulations!</div>
                 <div id="gameover-message">Game Over!</div>
             </div>    
