--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                      <button class="key" id="L">L</button>
                  </div>
                  <div class="keyboardRow" id="keyboardRow-2">
-                     <button class="key" id="key-delete">«</button>
+                     <button class="key" id="key-delete">DEL</button>
                      <button class="key" id="Z">Z</button>
                      <button class="key" id="X">X</button>
                      <button class="key" id="C">C</button>
