adding new colors

--- a/index.html
+++ b/index.html
@@ -33,13 +33,20 @@
                 <li>Let's play!</li>
                 </ul>
             </div>
+            <br>
+            
+            <!-- <div id="alert-container"></div>
+            <div id="invalid-word-alert">
+                <h2 id="alert-title"></h2>
+                <p id="alert-message"></p>
+                <button id="alert-ok-button">OK</button>
+            </div> -->
 
             <div id="window-message">
-                <!-- <div id="invalid-word-message">Word doesn't exist</div> -->
                 <div id="win-message">Congratulations!</div>
                 <div id="gameover-message">Game Over!</div>
             </div>    
-
+            <br>
             <div class="input-container">
                 <div class="inputRow" id="inputRow-0">
                     <div class="square" id="inputRow-0-square-0"></div>
@@ -84,7 +91,7 @@
                     <div class="square" id="inputRow-5-square-4"></div>
                 </div>
             </div>
-
+<br>
 
 
             <div class="keyboard-container">
