adding reset button

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                      <button class="key" id="M">M</button>
                      <button class="key" id="key-enter">ENTER</button>
                  </div>
+                 <div>
+                    <button class="reset-button">Reset</button>
+                 </div>
             </div>
             
             <audio id="sound-effect" class="winning" src="crowd-cheer-ii-6263.mp3"></audio>
