adding changed to page instructions and readme.md

--- a/intructions.html
+++ b/intructions.html
@@ -38,6 +38,9 @@
                 </ul>
             </div>
            
+            <div id="back-to-game">
+                <a href="./index.html" target="_self"><img src="./images/back-arrow.png" alt="back to the game"></a>
+        </div>
             
 
 
