--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 >Wordle Game</h1>
             </div>
             <div id="how-to-play">
-                    <a href="./intructions.html" target="_blank"><img src="./images/artistic.png" alt="how to play"></a>
+                    <a href="./intructions.html" target="_self"><img src="./images/artistic.png" alt="how to play"></a>
             </div>
             
             <div id="window-message">
