add showWordle function

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 </div>
             </div>
 <br>
+            <div id="wordlewindow">
+                <div id="secret-wordle">Your wordle was: <span id="wordle-variable"></span></div>
+            </div>
+  
 
             <div class="keyboard-container">
                 <div class="keyboardRow" id="keyboardRow-0">
